assets/css/custom.css
/* ... */
        /*Previous Buttons*/
        #msform .action-button-previous {
            width: auto;
            background: #616161;
            font-weight: bold;
            color: white;
            border: 0 none;
            border-radius: 5px;
            cursor: pointer;
            padding: 6px 30px;
            margin: 10px 5px;
            font-size: 20px;
            /*float: right;*/
            position: absolute;
            right: 150px;
        }

        #msform .action-button-previous:hover, #msform .action-button-previous:focus {
            box-shadow: 0 0 0 2px white, 0 0 0 3px #616161;
        }

        

        /*The background card*/
        .card {
            z-index: 0;
            border: none;
            border-radius: 0.5rem;
            position: relative;
        }

        /*FieldSet headings*/
        .fs-title {
            font-size: 25px;
            color: #2C3E50;
            margin-bottom: 10px;
            font-weight: bold;
            text-align: left;
        }

        /*progressbar*/
        #progressbar {
            margin-bottom: 30px;
            overflow: hidden;
            color: lightgrey;
        }

        #progressbar .active {
            color: #000000;
        }

        #progressbar li {
            list-style-type: none;
            font-size: 12px;
            width:16%;
            float: left;
            position: relative;
        }

        /*Icons in the ProgressBar*/

        #progressbar #calculate:before {
            font-family: FontAwesome;
            content: "\31";
        }

        #progressbar #categorization:before {
            font-family: FontAwesome;
            content: "\32";
        }

        #progressbar #kyc:before {
            font-family: FontAwesome;
            content: "\33";
        }

        #progressbar #invoice:before {
            font-family: FontAwesome;
            content: "\34";
        }

        #progressbar #payment:before {
            font-family: FontAwesome;
            content: "\35";
        }

        #progressbar #collection:before {
            font-family: FontAwesome;
            content: "\36";
        }

        /*ProgressBar before any progress*/
         

         #progressbar li:before {
            width: 40px;
            height: 40px;
            line-height: 35px;
            display: block;
            font-size: 28px;
            color: #ffffff;
            background: lightgray;
            border-radius: 50%;
            margin: 0 auto 10px auto;
            padding: 2px;
            font-weight: bold;
        }

        /*ProgressBar connectors*/
        #progressbar li:after {
            content: '';
            width: 100%;
            height: 4px;
            background: lightgray;
            position: absolute;
            left: 0;
            top: 20px;
            z-index: -1;
        }

        /*Color number of the step and the connector before it*/
        #progressbar li.active:before, #progressbar li.active:after {
            background:#fe0000;
        }












/*Transaction page ----------------------------------------------------------------------------*/

/*.transaction-pmt {
        margin:1% auto 2%;
    }
*/

.transaction-pmt .nav-pills .nav-link.active {
    background-color: #ffffff;
    color: #010101;
    border:1px solid #a0a0a0;
    border-radius: 0px;
    margin:2px 25px 2px 0px;
}

 
.transaction-pmt .nav-link {
    display: block;
    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
    font-size: 14px;
    font-weight: var(--bs-nav-link-font-weight);
    color: #b8bdbf;
    text-decoration: none;
    border: 1px solid #c5c0c0;
    border-radius: 0px;
    margin: 2px 25px 2px 0px;
}



.transaction-pmt .border {
    border:1px solid #a0a0a0 !important;
}

.transaction-box {
    padding: 10px;
    /*margin:30% auto 20% auto;*/
    /*background-color:#dddddd;*/
}


 .transaction-box .step1 {
        position: relative;
        bottom: 0;
        width: auto;
    }

    .transaction-box .step2 {
        position:relative ;
        bottom:0;
        width: auto;
    }

    .transaction-box .step3 {
        bottom:0;
        position:relative ;
        width: auto;

    }

    .transaction-box .step4 {
        bottom:0;
        position:relative ;
        width: auto;

    }

    .transaction-box .step5 {
        bottom:0;
        position:relative ;
        width: auto;
    }


    .transaction-box .step6 {
        bottom:0;
        position:relative ;
        width: auto;
    }


    .set-heading{
        padding:10px;
        border:1px solid #000000;
    }

    .set-heading h6 {
        color: #010101;
        font-size: 16px;
        text-align: left;
        font-weight: 600;
        margin-top: 4px;
        line-height: 12px;
    }


    .set-total {
        padding: 11px 5px 3px;
        border: 1px solid #010101;
        min-height: 40px;
    }

    .set-total h4{
        color: #010101;
        font-size: 16px;
        text-align: left;
        font-weight: 600;
        margin-top: 4px;
        line-height: 12px;
    }

    .set-total h5 {
        color: #010101;
        font-size: 22px;
        text-align: right;
        font-weight: 600;
        margin-top: 4px;
        line-height: 12px;
    }


    .gone {
        width: 32px;
        height: 30px;
        background: #000000;
        font-size: 20px;
        font-weight: 600;
        border-radius: 50px;
        text-align: center;
        margin: 13% auto 0;
    }

    .gone span {
        color: #fe0000;
        font-weight: bold;
        text-align: center;
    }


    .gtwo {
        width: 32px;
        height: 29px;
        background: #000000;
        font-size: 20px;
        font-weight: 600;
        border-radius: 50px;
        text-align: center;
        display: inline-flex;
    }

    .gtwo span {
        color: #fe0000;
        font-weight: bold;
        line-height: 30px;
        width: 30px;
    }
/* ... */

